# gnn_explanation_encoder

./: DEVELOP.rst  LICENSE  README.rst  pyproject.toml
gnn_explanation_encoder/: cli.py  data.py  models.py  utils.py
gnn_explanation_encoder/experiments/: disk_write_speed.py  generate_pairwise_explanation_distance_dataset.py  generate_pairwise_explanation_distance_dataset_aqsoldb.py  implicit_encode_graph_clusters.py  implicit_encode_vector_clusters.py  mask_binarization.py  train_encoder_explanation_distances.py  train_encoder_explanation_distances_aqsoldb.py  train_graph_distance_estimator.py
gnn_explanation_encoder/experiments/assets/models/aqsoldb/: fingerprint.pb  keras_metadata.pb  saved_model.pb
gnn_explanation_encoder/experiments/assets/models/aqsoldb/variables/: variables.data-00000-of-00001  variables.index
gnn_explanation_encoder/experiments/assets/models/rb_dual_motifs/: fingerprint.pb  keras_metadata.pb  saved_model.pb
gnn_explanation_encoder/experiments/assets/models/rb_dual_motifs/variables/: variables.data-00000-of-00001  variables.index
tests/: test_models.py  test_util.py
