[build-system]
requires = ["poetry-core>=1.2.0b2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gnn_explanation_encoder"
version = "0.1.0"
description = "Insert Description"
license = "MIT license"
authors = ["anon_6txdqo <anon_1yw2q8>"]
maintainers = ["anon_6txdqo <anon_1yw2q8>"]
readme = "README.rst"
keywords = []
packages = [
    { include = "gnn_explanation_encoder" },
    { include = "gnn_explanation_encoder/experiments"},
]
include = [
    "gnn_explanation_encoder/VERSION",
]

[tool.poetry.scripts]
gnn_explanation_encoder = 'gnn_explanation_encoder.cli:cli'

[tool.poetry.dependencies]
python = ">=3.8.0,<4.0"
pycomex = ">=0.9.2"
click = ">=7.1.2"
jinja2 = ">=3.0.3"
matplotlib = ">=3.5.3"
numpy = ">=1.23.2"
python-decouple = ">=3.6"
poetry-bumpversion = ">=0.3.0"
visual-graph-datasets = ">=0.13.4"
graph-attention-student = ">=0.10.0"

[tool.poetry.dev-dependencies]
pytest = ">=7.1.3"
poetry-bumpversion = ">=0.3.0"

[tool.poetry_bumpversion.file."gnn_explanation_encoder/VERSION"]
search = "{current_version}"
replace = "{new_version}"

[tool.poetry_bumpversion.file."README.rst"]
search = 'version-{current_version}-orange.svg'
replace = 'version-{new_version}-orange.svg'

[tool.poetry_bumpversion.file."gnn_explanation_encoder/__init__.py"]
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'